opam-version: "2.0"
authors: "Ahrefs"
homepage: "https://git.ahrefs.com/ahrefs/esgg"
maintainer: "igor@ahrefs.com"
dev-repo: "git+ssh://git@git.ahrefs.com/ahrefs/esgg.git"
bug-reports: "https://git.ahrefs.com/ahrefs/esgg/issues"
synopsis: "Query generator for elasticsearch"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  [make "test"] {with-test}
]
depends: [
  "dune" {build & != "1.4.0"}
  "ocaml" { >= "4.03.0" }
  "yojson"
  "extlib"
  "devkit"
  "atd" {>= "1.13.0" & < "2.0.0"}
  "easy-format"
  "jsonm"
  "ppx_deriving"
  "mybuild"
]
version: "git"
