opam-version: "2.0"
homepage: "https://github.com/ahrefs/esgg"
synopsis: "Elasticsearch guided (code) generator"
authors: "Ahrefs Pte Ltd <github@ahrefs.com>"
maintainer: "Ahrefs Pte Ltd <github@ahrefs.com>"
dev-repo: "git+https://github.com/ahrefs/esgg.git"
bug-reports: "https://github.com/ahrefs/esgg/issues"
license: "GPL-2.0-only"
tags: ["org:ahrefs"]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "1.3."}
  "ocaml" { >= "4.04.0" }
  "yojson" {>= "2.0.0"}
  "extlib" {>= "1.7.1"}
  "atd" {>= "2.0.0"}
  "easy-format"
  "jsonm"
  "ppx_deriving" {>= "4.2"}
  "mybuild" {>= "4"}
]
conflicts: [
  "dune" {= "1.4.0"}
]
